2005-02-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert-fsdither.h
	* app/core/gimpimage-convertc: save a kilobyte of data by using
	guchar for the range array.

2005-02-27  Daniel Egger  <de@axiros.com>

	* app/base/Makefile.am
	* app/composite/Makefile.am
	* app/config/Makefile.am
	* app/core/Makefile.am
	* app/display/Makefile.am
	* app/file/Makefile.am
	* app/paint-funcs/Makefile.am
	* app/pdb/Makefile.am
	* app/plug-in/Makefile.am
	* app/text/Makefile.am
	* app/tools/Makefile.am
	* app/vectors/Makefile.am
	* app/xcf/Makefile.am: Commonized include paths to always look
	in the builddir also to cater for srcdir != builddir builds.

2005-02-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpgradient.[ch]: removed the "last_visited" field
	from GimpGradient. Instead added a segment parameter to
	gimp_gradient_get_color_at() that allows the caller to do the same
	optimization.

	* app/actions/gradient-editor-commands.c
	* app/core/gimpdrawable-blend.c
	* app/core/gimppalette-import.c
	* app/paint/gimppaintoptions.c
	* app/widgets/gimpgradienteditor.c
	* app/widgets/gimpgradientselect.c
	* app/widgets/gimpviewrenderergradient.c: changed accordingly.

	* app/pdb/gradient_cmds.c
	* app/pdb/gradients_cmds.c: regenerated.

2005-02-26  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/png.c: revert change to read images one row at a
	time, it didn't really fix the bug.

2005-02-26  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-blend.c: minor code cleanup.

2005-02-26  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-processor.c (do_parallel_regions): obtain a lock
	on the pool mutex while signalling the termination condition.

2005-02-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/png.c: read non-interlaced files one row
	at a time instead of in 64-row chunks; fixes bug #137327.

2005-02-25  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/siod/siod.h